# hrafn

./: .gitignore  .markdownlint-cli2.yaml  CONTRIBUTING.md  Cargo.toml  NOTICE  PRD.md  README.md  install.sh
.github/: pull_request_template.md
.github/workflows/: ci-run.yml  docs-pages.yml  pr-review.yml  release-beta-on-push.yml  release-stable-manual.yml
crates/hrafn-kernel/: Cargo.toml
crates/hrafn-sdk/: Cargo.toml
crates/hrafn-sdk/src/: protocol.rs
dev/: measure-microkernel.sh
docs/architecture/: adr-005-synaptic-memory-retrieval.md
docs/contributing/: cla.md
docs/i18n/: README.md
docs/maintainers/: project-triage-snapshot-2026-02-18.md  trademark.md
docs/setup-guides/: README.md  trading-setup.md
src/: lib.rs  main.rs
src/agent/: agent.rs  history.rs  loop_.rs
src/channels/: mcp_notification.rs  mod.rs  stdio_rpc.rs  telegram_user.rs
src/commands/: mod.rs  sessions.rs  update.rs
src/config/: mod.rs  schema.rs
src/cron/: mod.rs  scheduler.rs  store.rs
src/gateway/: a2a.rs  a2a_push.rs  acp.rs  api.rs  mod.rs
src/memory/: audit.rs  battle_tests.rs  mod.rs  retrieval.rs
src/onboard/: wizard.rs
src/providers/: bedrock.rs
src/security/: policy.rs
src/session/: id.rs  message.rs  mod.rs  schema.sql  store.rs  types.rs
src/skills/: mod.rs
src/tools/: a2a.rs  mcp_client.rs  mcp_deferred.rs  mod.rs  schema.rs  shell.rs  spawn_agent.rs  traits.rs
src/tui/: events.rs  mod.rs  picker.rs  widgets.rs
templates/: alert_response.md  trading_signal.md
tests/component/: config_schema.rs  microkernel_profile.rs
(+152 files in other folders)
